--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,10 @@
   --ff-header: "Urbanist", sans-serif, 900;
   /* font familie */
 
-  --fs-1100: clamp(2.5rem, 1rem + 5vw, 5rem);
-  --fs-900: clamp(1rem, 1rem + 5vw, 3rem);
+  --fs-1100: clamp(2.5rem, 1.2rem + 5vw, 5rem);
+  --fs-900: clamp(1.2rem, 1.2rem + 5vw, 3rem);
   --fs-400: 1.8rem;
+  --fs-para: 1.2rem;
   --fs-300: 1.4rem;
   /* størrelser */
 
@@ -32,6 +33,9 @@ html {
 /* main side (alt utenom navigasjon)*/
 main {
   font-family: "Urbanist", sans-serif;
+margin-left: auto;
+margin-right: auto;
+  max-width: 1920px; 
 }
 
 h1 {
@@ -156,6 +160,7 @@ margin-top: 10rem;
 
 .image-box-1 > img {
   width: 100%;
+  max-width: 1920px;
   object-fit: contain;
   position: absolute;
 }
@@ -166,6 +171,7 @@ margin-top: 10rem;
 
 .image-box-2 > img {
   width: 98vw;
+  max-width: 1920px;
   object-fit: contain;
 
   position: -webkit-sticky;
@@ -303,12 +309,14 @@ margin-top: 5rem;
   }
 
 
-  .paragraph-box-right {
-/*    grid-column: 2; */
-
-grid-row:    1 / 5;
-grid-column: 2 / 4;
+  /*paragrafene */
+   .paragraph-box-right {
+     
+    font-size: var(--fs-para);
+    grid-row: 1 / 5;
+    grid-column: 2 / 4;
   }
+
 
   .paragraph-box-left-empty {
     background-color: white;
@@ -396,7 +404,7 @@ grid-column: 2 / 4;
     display: flex;
   }
   .image-box-3 {
-    width: 100vh;
+    width: 100%;
     height: auto;
     object-fit: contain;
     display: block;
@@ -446,8 +454,7 @@ https://blog.hubspot.com/website/horizontal-scrolling
 
     border: none;
     width: 95vw;
-    height: 150px;
-    overflow: scroll;
+    height: auto;
 
     box-shadow: inset 0 0 15px #0000000e;
   }
@@ -477,6 +484,7 @@ https://blog.hubspot.com/website/horizontal-scrolling
 
 .image-box-3 {
   width: 100%;
+  max-width: 1920px;
   height: auto;
   object-fit: contain;
   display: block;
